--- a/C968 Inventory Program/C968 Inventory Program.csproj
+++ b/C968 Inventory Program/C968 Inventory Program.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Add Part.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Add Part.Designer.cs">
+      <DependentUpon>Add Part.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main Form.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Add Part.resx">
+      <DependentUpon>Add Part.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main Form.resx">
       <DependentUpon>Main Form.cs</DependentUpon>
     </EmbeddedResource>
