--- a/C968 Inventory Program/C968 Inventory Program.csproj
+++ b/C968 Inventory Program/C968 Inventory Program.csproj
@@ -58,6 +58,12 @@
     <Compile Include="Main Form.Designer.cs">
       <DependentUpon>Main Form.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modify Part.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Modify Part.Designer.cs">
+      <DependentUpon>Modify Part.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Add Part.resx">
@@ -65,6 +71,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Main Form.resx">
       <DependentUpon>Main Form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Modify Part.resx">
+      <DependentUpon>Modify Part.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
